--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,31 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <title>Hello Flask</title>
+<title>Task Master</title>
 {% endblock %}
 
 {% block body %}
-<h2>Hello from Flask v3</h2>
+<div class="content">
+    <h1>Task master</h1>
+
+    <table>
+        <tr>
+            <th>Task</th>
+            <th>Added</th>
+            <th>Actions</th>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td>
+                <a href="">Delete</a>
+                <a href="">Update</a>
+            </td>
+        </tr>
+    </table>
+    <form action="/" method="post">
+        <input type="text" name="content" id="content">
+        <input type="submit" value="Add Task">
+    </form>
+</div>
 {% endblock %}
