--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,16 @@
             <th>Added</th>
             <th>Actions</th>
         </tr>
+        {% for task in tasks %}
         <tr>
-            <td></td>
-            <td></td>
+            <td>{{ task.content }}</td>
+            <td>{{ task.date_created.date() }}</td>
             <td>
                 <a href="">Delete</a>
                 <a href="">Update</a>
             </td>
         </tr>
+        {% endfor %}
     </table>
     <form action="/" method="post">
         <input type="text" name="content" id="content">
