--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
             <td>{{ task.content }}</td>
             <td>{{ task.date_created.date() }}</td>
             <td>
-                <a href="">Delete</a>
-                <a href="">Update</a>
+                <a href="/delete/{{ task.id }}">Delete</a>
+                <a href="/update/{{ task.id }}">Update</a>
             </td>
         </tr>
         {% endfor %}
