--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,9 @@
 {% block body %}
 <div class="content">
     <h1>Task master</h1>
-
+    {% if tasks|length < 1 %}
+    <h4>There is no tasks. Please create one below.</h4>
+    {% else %}
     <table>
         <tr>
             <th>Task</th>
@@ -25,6 +27,7 @@
         </tr>
         {% endfor %}
     </table>
+    {% endif %}
     <form action="/" method="post">
         <input type="text" name="content" id="content">
         <input type="submit" value="Add Task">
